--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
             <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner rounded">
                 <div class="carousel-item active">
-                  <img src="content/sei_center-Photoroom.png" class="d-block w-100" alt="Boba 1">
+                  <img src="content/sei-carousel-main.png" class="d-block w-100" alt="Сеи боба" title="Вкуснейшая сеи боба">
                 </div>
                 <div class="carousel-item">
-                  <img src="content/sei_main-Photoroom.png" class="d-block w-100" alt="Boba 2">
+                  <img src="content/sei-carousel-center-Photoroom.png" class="d-block w-100" alt="Сеи боба" title="Вкуснейшая сеи боба">
                 </div>
                 <div class="carousel-item">
-                    <img src="content/sei_last-Photoroom.png" class="d-block w-100" alt="Boba 2">
+                    <img src="content/sei-carousel-last.png" class="d-block w-100" alt="Сеи боба" title="Вкуснейшая сеи боба">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
@@ -189,13 +189,13 @@
               <div id="carousel2" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner rounded">
                   <div class="carousel-item active">
-                    <img src="content/chocoooo-Photoroom.png" class="d-block w-100" alt="Boba 1">
+                    <img src="content/choco-carousel-first.png" class="d-block w-100" alt="Choco Boba" title="Вкуснейшая шоколадная боба">
                   </div>
                   <div class="carousel-item">
-                    <img src="content/choco_plus_vibe.jpg" class="d-block w-100" alt="Boba 2">
+                    <img src="content/choco-carousel-middle.jpg" class="d-block w-100" alt="Choco Boba" title="Вкуснейшая шоколадная боба">
                   </div>
                   <div class="carousel-item">
-                      <img src="content/choco_last.png" class="d-block w-100" alt="Boba 2">
+                      <img src="content/choco-carousel-last.png" class="d-block w-100" alt="Choco Boba" title="Вкуснейшая шоколадная боба">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
@@ -451,5 +451,6 @@ auth.onAuthStateChanged(user => {
 </script>
 </body>
 </html>
+
 
 
